# pixelate

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  bandit-report.json  copilot-instructions.md  generate.py  pixel_icon_generator.py  pyproject.toml  requirements.txt  setup.py
.github/: RELEASE.md  copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml  format.yml  lint.yml  quality.yml  release.yml  security.yml  test.yml
examples/: bird.md  heart.md  palette-demo.md  penguin.md  pixelate.md  signal-system.md
pixelate/: __init__.py  app.py  cli.py  core.py  generator.py  palettes.py  parser.py  pixelator.py
pixelate/palette/: __init__.py  _palette.py  base.toml  css4.toml  get_color_palette.py  tableau.toml  xkcd.toml
pixelate/palette/assets/: base.toml  create.py  css4.toml  tableau.toml
pixelate/utility/: bidict.py  singleton.py
releases/: RELEASE.md  v0.0.1.md
src/pixelate/: __init__.py  app.py  cli.py  generator.py  parser.py  pixelator.py
src/pixelate/palette/: _palette.py
src/pixelate/palette/assets/: create.py  xkcd.toml
src/pixelate/utility/: bidict.py
tests/: palettes_test.py  pixelate_test.py  test_palettes.py  test_pixelate.py
